--- a/app/src/main/res/menu/menu_home.xml
+++ b/app/src/main/res/menu/menu_home.xml
@@ -3,8 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.tictactoe.HomeActivity">
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/action_refresh"
+        android:icon="@drawable/ic_refresh_white_24dp"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="never" />
+        android:title="REFRESH"
+        app:showAsAction="always" />
 </menu>
